--- a/src/common/Cassandra_DB_Setup.ipynb
+++ b/src/common/Cassandra_DB_Setup.ipynb
@@ -40,21 +40,27 @@
     "\n",
     "def cassandra_connection(path, cassandra_config):\n",
     "    \n",
-    "    # Get Bundle from Zip file\n",
-    "    cloud_config= {\n",
-    "      'secure_connect_bundle': path\n",
-    "    }\n",
+    "    try:\n",
     "    \n",
-    "    # Get DB configurations from configuration.yaml\n",
+    "        # Get Bundle from Zip file\n",
+    "        cloud_config= {\n",
+    "          'secure_connect_bundle': path\n",
+    "        }\n",
+    "\n",
+    "        # Get DB configurations from configuration.yaml\n",
+    "\n",
+    "        auth_provider = PlainTextAuthProvider(cassandra_config['ASTRA_CLIENT_ID'], cassandra_config['ASTRA_CLIENT_SECRET'])\n",
+    "\n",
+    "        # Connct to Cassandra DB Cluster\n",
+    "\n",
+    "        cluster = Cluster(cloud=cloud_config, auth_provider=auth_provider)\n",
+    "        session = cluster.connect()\n",
+    "\n",
+    "        return session\n",
     "    \n",
-    "    auth_provider = PlainTextAuthProvider(cassandra_config['ASTRA_CLIENT_ID'], cassandra_config['ASTRA_CLIENT_SECRET'])\n",
-    "    \n",
-    "    # Connct to Cassandra DB Cluster\n",
-    "    \n",
-    "    cluster = Cluster(cloud=cloud_config, auth_provider=auth_provider)\n",
-    "    session = cluster.connect()\n",
-    "    \n",
-    "    return session"
+    "    except Exception as e:\n",
+    "        \n",
+    "        print(\"Error connecting to Casandra DB\", str(e))"
    ]
   },
   {
@@ -76,31 +82,37 @@
     "\n",
     "def create_table(session, keyspace, table_name, column_names, column_types, primary_key):\n",
     "    \n",
-    "    \n",
-    "    # Prepare Query for Table Creation based on parameters\n",
-    "    \n",
-    "    qry= 'CREATE TABLE IF NOT EXISTS ' + keyspace + '.' + table_name + '('\n",
-    "    \n",
-    "    for i in range(len(column_names)):\n",
-    "        qry = qry + column_names[i] +  ' ' + column_types[i] + ', '\n",
-    "    \n",
-    "    \n",
-    "    if primary_key:\n",
-    "        qry = qry + 'PRIMARY KEY('\n",
-    "        for pk in primary_key:\n",
-    "            qry = qry + pk + ', '\n",
-    "    \n",
-    "        qry = qry[:-2] + '));'\n",
+    "    try:\n",
     "        \n",
-    "    else:\n",
-    "         qry = qry[:-2] + ');'\n",
+    "        # Prepare Query for Table Creation based on parameters\n",
+    "\n",
+    "        qry= 'CREATE TABLE IF NOT EXISTS ' + keyspace + '.' + table_name + '('\n",
+    "\n",
+    "        for i in range(len(column_names)):\n",
+    "            qry = qry + column_names[i] +  ' ' + column_types[i] + ', '\n",
+    "\n",
+    "\n",
+    "        if primary_key:\n",
+    "            qry = qry + 'PRIMARY KEY('\n",
+    "            for pk in primary_key:\n",
+    "                qry = qry + pk + ', '\n",
+    "\n",
+    "            qry = qry[:-2] + '));'\n",
+    "\n",
+    "        else:\n",
+    "             qry = qry[:-2] + ');'\n",
+    "\n",
+    "\n",
+    "\n",
+    "        #Execute Table Creation Query\n",
+    "\n",
+    "        print(qry)\n",
+    "        session.execute(qry)\n",
     "    \n",
     "    \n",
-    "    \n",
-    "    #Execute Table Creation Query\n",
-    "    \n",
-    "    print(qry)\n",
-    "    session.execute(qry)"
+    "    except Exception as e:\n",
+    "        \n",
+    "        print(\"Error creating table in Cassandra DB\", str(e))"
    ]
   },
   {
@@ -122,17 +134,22 @@
     "\n",
     "def insert_into_table_from_df(session, keyspace, table_name, column_names, df):\n",
     "    \n",
+    "    try:\n",
     "    \n",
-    "    # Prepare Query for insertion into table\n",
-    "    \n",
-    "    qry= 'INSERT INTO ' + keyspace + '.' + table_name + ' ' + column_names + ' '  + 'VALUES (%s, %s)'\n",
-    "    \n",
-    "    \n",
-    "    # Read Each Row from Data Frame and Insert Into Table One by One\n",
-    "    \n",
-    "    for key, value in df.items():\n",
-    "        print(qry, key, value)\n",
-    "        session.execute(qry, (key, value))"
+    "        # Prepare Query for insertion into table\n",
+    "\n",
+    "        qry= 'INSERT INTO ' + keyspace + '.' + table_name + ' ' + column_names + ' '  + 'VALUES (%s, %s)'\n",
+    "\n",
+    "\n",
+    "        # Read Each Row from Data Frame and Insert Into Table One by One\n",
+    "\n",
+    "        for key, value in df.items():\n",
+    "            print(qry, key, value)\n",
+    "            session.execute(qry, (key, value))\n",
+    "            \n",
+    "    except Exception as e:\n",
+    "        \n",
+    "        print(\"Error inserting data into Cassandta DB table\", str(e))"
    ]
   },
   {
@@ -154,21 +171,26 @@
     "\n",
     "def select_from_table(session, keyspace, table_name):\n",
     "    \n",
+    "    try:\n",
     "    \n",
-    "    # Prepare Query for select\n",
+    "        # Prepare Query for select\n",
+    "\n",
+    "        qry= 'SELECT * from '+ keyspace + '.' + table_name + ';'\n",
+    "\n",
+    "\n",
+    "        # Execute Query\n",
+    "\n",
+    "        print(qry)\n",
+    "        result = session.execute(qry)\n",
+    "\n",
+    "\n",
+    "        # Print Each Row Reteived from the table\n",
+    "        for x in result:\n",
+    "            print(x[0], x[1])\n",
     "    \n",
-    "    qry= 'SELECT * from '+ keyspace + '.' + table_name + ';'\n",
-    "    \n",
-    "    \n",
-    "    # Execute Query\n",
-    "    \n",
-    "    print(qry)\n",
-    "    result = session.execute(qry)\n",
-    "    \n",
-    "    \n",
-    "    # Print Each Row Reteived from the table\n",
-    "    for x in result:\n",
-    "        print(x[0], x[1])"
+    "    except Exception as e:\n",
+    "        \n",
+    "        print(\"Error selecting from to Cassandra DB table\", str(e))"
    ]
   }
  ],
