--- a/src/common/Extract_Twitter_Trends.ipynb
+++ b/src/common/Extract_Twitter_Trends.ipynb
@@ -60,58 +60,63 @@
     "\n",
     "    def get_top_trends(self):\n",
     "\n",
-    "        \n",
-    "        # Configure Webdriver\n",
-    "        \n",
-    "        options = Options()\n",
-    "        options.add_argument('--headless')\n",
-    "        \n",
+    "        try:\n",
+    "            \n",
+    "            # Configure Webdriver\n",
     "\n",
-    "        # Obtain the version of ChromeDriver compatible with the browser being used\n",
-    "        \n",
-    "        driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
-    "    \n",
-    "    \n",
-    "        # Generate URL for Scraping based on Configuartions  \n",
-    "        \n",
-    "        url = \"https://getdaytrends.com/\" + self.country + \"/\" + str(self.date) + \"/\" + str(self.hour) + \"/\" \n",
-    "        print(url)\n",
-    "\n",
-    "        \n",
-    "        # Web Scrape getdaytrends to bring the Twitter Trends\n",
-    "        \n",
-    "        driver.get(url)\n",
-    "\n",
-    "        \n",
-    "        # Retreive Trends table\n",
-    "        \n",
-    "        content = driver.page_source\n",
-    "        \n",
-    "        \n",
-    "        # parse the HTML content obtained to get Top Trends\n",
-    "        \n",
-    "        soup = BeautifulSoup(content, \"html.parser\")\n",
-    "        mytds = soup.findAll(\"title\")\n",
-    "\n",
-    "        \n",
-    "        # Cap Top if it is greater than number of trends received from website\n",
-    "        \n",
-    "        top = self.top+1\n",
-    "        if top > len(mytds):\n",
-    "            top = len(mytds)\n",
-    "            self.top = len(mytds) - 1\n",
-    "        \n",
-    "        \n",
-    "        # Retrieve Top Trends \n",
-    "        \n",
-    "        for i in range(top): \n",
-    "            if i > 0:\n",
-    "                text = str(mytds[i])\n",
-    "                result = re.search('title>(.*):', text)\n",
-    "                self.top_trends[i] = result.group(1).replace('#', '').lower()\n",
+    "            options = Options()\n",
+    "            options.add_argument('--headless')\n",
     "\n",
     "\n",
-    "        return self.top_trends"
+    "            # Obtain the version of ChromeDriver compatible with the browser being used\n",
+    "\n",
+    "            driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
+    "\n",
+    "\n",
+    "            # Generate URL for Scraping based on Configuartions  \n",
+    "\n",
+    "            url = \"https://getdaytrends.com/\" + self.country + \"/\" + str(self.date) + \"/\" + str(self.hour) + \"/\" \n",
+    "            print(url)\n",
+    "\n",
+    "\n",
+    "            # Web Scrape getdaytrends to bring the Twitter Trends\n",
+    "\n",
+    "            driver.get(url)\n",
+    "\n",
+    "\n",
+    "            # Retreive Trends table\n",
+    "\n",
+    "            content = driver.page_source\n",
+    "\n",
+    "\n",
+    "            # parse the HTML content obtained to get Top Trends\n",
+    "\n",
+    "            soup = BeautifulSoup(content, \"html.parser\")\n",
+    "            mytds = soup.findAll(\"title\")\n",
+    "\n",
+    "\n",
+    "            # Cap Top if it is greater than number of trends received from website\n",
+    "\n",
+    "            top = self.top+1\n",
+    "            if top > len(mytds):\n",
+    "                top = len(mytds)\n",
+    "                self.top = len(mytds) - 1\n",
+    "\n",
+    "\n",
+    "            # Retrieve Top Trends \n",
+    "\n",
+    "            for i in range(top): \n",
+    "                if i > 0:\n",
+    "                    text = str(mytds[i])\n",
+    "                    result = re.search('title>(.*):', text)\n",
+    "                    self.top_trends[i] = result.group(1).replace('#', '').lower()\n",
+    "\n",
+    "\n",
+    "            return self.top_trends\n",
+    "\n",
+    "        except Exception as e:\n",
+    "\n",
+    "            print(\"Error Getting Top Trends from getdaytrends\", str(e))"
    ]
   }
  ],
