--- a/src/common/My_Subscribe_Callback.ipynb
+++ b/src/common/My_Subscribe_Callback.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b2e26b49",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d218289b",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "61f67012",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5cd86377",
    "metadata": {},
    "outputs": [],
@@ -148,19 +148,23 @@
     "        \n",
     "        creation_time = datetime.strptime(message.message['created_at'], \"%a %b %d %H:%M:%S %z %Y\")\n",
     "        \n",
+    "        try:\n",
+    "            \n",
+    "            # Declare Global Variables\n",
     "\n",
-    "        # Declare Global Variables\n",
+    "            global get_hour, get_date\n",
+    "\n",
+    "\n",
+    "            # Update global variables based on stream date and hour\n",
+    "\n",
+    "            if get_hour is None :\n",
+    "                get_hour = creation_time.hour\n",
+    "                get_date = creation_time.date()\n",
+    "                print(get_hour, get_date)\n",
+    "                return\n",
     "        \n",
-    "        global get_hour, get_date\n",
-    "        \n",
-    "        \n",
-    "        # Update global variables based on stream date and hour\n",
-    "        \n",
-    "        if get_hour is None :\n",
-    "            get_hour = creation_time.hour\n",
-    "            get_date = creation_time.date()\n",
-    "            print(get_hour, get_date)\n",
-    "            return"
+    "        except Exception as e:\n",
+    "            print(\"Error getting date and hour from twitter stream\", str(e))"
    ]
   },
   {
@@ -173,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "fd53b896",
    "metadata": {},
    "outputs": [],
@@ -209,108 +213,122 @@
     "    \n",
     "        # Start Processing Start Time are initialized\n",
     "        \n",
-    "        if start_times[0] is not None:\n",
-    "            \n",
-    "            \n",
-    "            # Loop for the number of minutes to track data for\n",
-    "            \n",
-    "            for i in range(len(set_minutes)):\n",
-    "                \n",
-    "                \n",
-    "                # if new minutes are added, populate start time for them\n",
-    "                \n",
-    "                if start_times[i] is None:\n",
+    "        try: \n",
+    "            if start_times[0] is not None:\n",
+    "\n",
+    "\n",
+    "                # Loop for the number of minutes to track data for\n",
+    "\n",
+    "                for i in range(len(set_minutes)):\n",
+    "\n",
+    "\n",
+    "                    # if new minutes are added, populate start time for them\n",
+    "\n",
+    "                    if start_times[i] is None:\n",
+    "                        start_times[i] = creation_time\n",
+    "\n",
+    "\n",
+    "                    # Start Processing if set minutes have passed \n",
+    "\n",
+    "                    if creation_time == (start_times[i]  + timedelta(minutes=set_minutes[i])) :\n",
+    "                        print(set_minutes[i], \" minutes have passed \", creation_time)\n",
+    "\n",
+    "\n",
+    "                        # Get unix time of current time and generate key (unix_time _ minutes)\n",
+    "\n",
+    "                        unix_time = int(time.mktime(start_times[i].timetuple())) \n",
+    "                        key =  str(unix_time) + \"_\" + str(set_minutes[i])\n",
+    "\n",
+    "\n",
+    "                        # Populate Payload ({Top Trend: Tweet Count})\n",
+    "\n",
+    "                        value = dict()\n",
+    "                        for trend_tuple, tweet_numbers in tweet_count.items():\n",
+    "                            trendd = trend_tuple[0]\n",
+    "                            minutess = trend_tuple[1]\n",
+    "                        \n",
+    "                            if minutess == set_minutes[i]:\n",
+    "                                value[trendd] = tweet_numbers\n",
+    "                                trends_tweets[key] = value\n",
+    "                                tweet_count[(trendd, set_minutes[i])] = 0\n",
+    "\n",
+    "                        print(\"Here's twitter tweets\", trends_tweets)\n",
+    "\n",
+    "\n",
+    "                        # Insert the Key Value Pair in Casssandra DB table\n",
+    "\n",
+    "                        columns = '(StreamTimeKey, TweetCountForTrends)'\n",
+    "                        Cassandra_DB_Setup.insert_into_table_from_df(session, \"twitter_trends\", \"tweets_per_trend\", columns, trends_tweets)\n",
+    "\n",
+    "\n",
+    "                        # Resrt Start time and Key Value Pair\n",
+    "\n",
+    "                        start_times[i] = creation_time\n",
+    "                        trends_tweets = dict()\n",
+    "\n",
+    "            else:\n",
+    "\n",
+    "\n",
+    "                # Initialize Start Times for the First Time\n",
+    "\n",
+    "                for i in range(len(set_minutes)):\n",
     "                    start_times[i] = creation_time\n",
-    "                    \n",
-    "                    \n",
-    "                # Start Processing if set minutes have passed \n",
-    "                \n",
-    "                if creation_time == (start_times[i]  + timedelta(minutes=set_minutes[i])) :\n",
-    "                    print(set_minutes[i], \" minutes have passed \", creation_time)\n",
     "\n",
-    "                    \n",
-    "                    # Get unix time of current time and generate key (unix_time _ minutes)\n",
-    "                    \n",
-    "                    unix_time = int(time.mktime(start_times[i].timetuple())) \n",
-    "                    key =  str(unix_time) + \"_\" + str(set_minutes[i])\n",
     "\n",
-    "                    \n",
-    "                    # Populate Payload ({Top Trend: Tweet Count})\n",
-    "                    \n",
-    "                    value = dict()\n",
-    "                    for trendd, tweet_numbers in tweet_count.items():\n",
-    "                        value[trendd] = tweet_numbers\n",
-    "                        trends_tweets[key] = value\n",
+    "                # Connect to Cassandra DB    \n",
     "\n",
-    "                    print(\"Here's twitter tweets\", trends_tweets)\n",
-    "                    \n",
-    "                    \n",
-    "                    # Insert the Key Value Pair in Casssandra DB table\n",
-    "                    \n",
-    "                    columns = '(StreamTimeKey, TweetCountForTrends)'\n",
-    "                    Cassandra_DB_Setup.insert_into_table_from_df(session, \"twitter_trends\", \"tweets_per_trend\", columns, trends_tweets)\n",
+    "                session = Cassandra_DB_Setup.cassandra_connection(set_zip_path, set_cassandra_configs)\n",
+    "                print(\"Process Started at: \", creation_time)\n",
+    "                print(session)\n",
     "\n",
-    "                    \n",
-    "                    # Resrt Start time and Key Value Pair\n",
-    "                    \n",
-    "                    start_times[i] = creation_time\n",
-    "                    trends_tweets = dict()\n",
-    "            \n",
-    "        else:\n",
-    "            \n",
-    "            \n",
-    "            # Initialize Start Times for the First Time\n",
-    "            \n",
-    "            for i in range(len(set_minutes)):\n",
-    "                start_times[i] = creation_time\n",
-    "                \n",
-    "                \n",
-    "            # Connect to Cassandra DB    \n",
-    "            \n",
-    "            session = Cassandra_DB_Setup.cassandra_connection(set_zip_path, set_cassandra_configs)\n",
-    "            print(\"Process Started at: \", creation_time)\n",
-    "            print(session)\n",
-    "            \n",
-    "            \n",
-    "            # Initialze Key Value Pairs\n",
-    "            \n",
-    "            for trend_number, set_trend in set_top_trends.items():\n",
-    "                tweet_count[set_trend] = 0\n",
-    "                \n",
-    "                \n",
-    "                \n",
-    "        # Get hashtags from stream   \n",
-    "        \n",
-    "        trend_list = message.message['entities']['hashtags']\n",
-    "        \n",
-    "        \n",
-    "        # Start Processing If hastags exist\n",
-    "        \n",
-    "        if trend_list:\n",
-    "            \n",
-    "            \n",
-    "            # Loop For each Hastag\n",
-    "            \n",
-    "            for trend in trend_list:\n",
     "\n",
-    "                \n",
-    "                # Get hasgtag text and convert to lower case\n",
-    "                \n",
-    "                trend_text = trend['text'].lower()\n",
-    "                \n",
-    "                \n",
-    "                # Loop for each Top Trend\n",
-    "                \n",
+    "                # Initialze Key Value Pairs\n",
+    "\n",
     "                for trend_number, set_trend in set_top_trends.items():\n",
+    "                    for i in range(len(set_minutes)):\n",
+    "                        tweet_count[(set_trend, set_minutes[i])] = 0\n",
+    "\n",
+    "\n",
+    "\n",
+    "            # Get hashtags from stream   \n",
+    "\n",
+    "            trend_list = message.message['entities']['hashtags']\n",
+    "\n",
+    "\n",
+    "            # Start Processing If hastags exist\n",
+    "\n",
+    "            if trend_list:\n",
+    "\n",
+    "\n",
+    "                # Loop For each Hastag\n",
+    "\n",
+    "                for trend in trend_list:\n",
     "                    \n",
-    "                    # If Top Trend found in current Hashtag text \n",
-    "                    if set_trend == trend_text:\n",
-    "                        \n",
-    "                        \n",
-    "                        # Increae Tweet Count for Top Trend\n",
-    "                        \n",
-    "                        print(set_trend, trend_text)\n",
-    "                        tweet_count[set_trend] +=1"
+    "                    \n",
+    "                    # Loop for each minute\n",
+    "                \n",
+    "                    for i in range(len(set_minutes)):\n",
+    "\n",
+    "\n",
+    "                        # Get hasgtag text and convert to lower case\n",
+    "\n",
+    "                        trend_text = trend['text'].lower()\n",
+    "\n",
+    "\n",
+    "                        # Loop for each Top Trend\n",
+    "\n",
+    "                        for trend_number, set_trend in set_top_trends.items():\n",
+    "\n",
+    "                            # If Top Trend found in current Hashtag text \n",
+    "                            if set_trend == trend_text:\n",
+    "\n",
+    "\n",
+    "                                # Increase Tweet Count for Top Trend\n",
+    "\n",
+    "                                tweet_count[(set_trend, set_minutes[i])] +=1\n",
+    "        \n",
+    "        except Exception as e:\n",
+    "            print(\"Error getting tweet count from twitter stream\", str(e))"
    ]
   }
  ],
