--- a/src/config/Read_Configs.ipynb
+++ b/src/config/Read_Configs.ipynb
@@ -54,7 +54,8 @@
     "            return cfg\n",
     "    \n",
     "    except Exception as e:\n",
-    "        print(str(e))"
+    "        \n",
+    "        print(\"Error reading configrations from .yaml\",  str(e))"
    ]
   },
   {
@@ -76,9 +77,14 @@
     "    \n",
     "    # read pubnub configrations from configurations.yaml\n",
     "    \n",
-    "    cfg = get_yaml()\n",
-    "    pubnub_config=cfg[\"pubnub_config\"]\n",
-    "    return pubnub_config      "
+    "    try:\n",
+    "        cfg = get_yaml()\n",
+    "        pubnub_config=cfg[\"pubnub_config\"]\n",
+    "        return pubnub_config      \n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        \n",
+    "        print(\"Error reading pubnub configurations\", str(e))"
    ]
   },
   {
@@ -98,18 +104,23 @@
    "source": [
     "def read_cassandra_configurations():\n",
     "    \n",
-    "    # read cassandra configrations from configurations.yaml\n",
+    "    try:\n",
+    "        \n",
+    "        # read cassandra configrations from configurations.yaml\n",
+    "\n",
+    "        cfg = get_yaml()\n",
+    "        cassandra_config=cfg[\"cassandra_config\"]\n",
+    "\n",
+    "        # get zip path for Cassandra db bundle\n",
+    "\n",
+    "        path = os.getcwd()\n",
+    "        zip_path = str(os.path.abspath(os.path.join(path, os.pardir))) + \"\\src\\data\\secure-connect-twitter-trends-db.zip\"\n",
+    "\n",
+    "        return zip_path, cassandra_config\n",
     "    \n",
-    "    cfg = get_yaml()\n",
-    "    cassandra_config=cfg[\"cassandra_config\"]\n",
-    "    \n",
-    "    \n",
-    "    # get zip path for Cassandra db bundle\n",
-    "    \n",
-    "    path = os.getcwd()\n",
-    "    zip_path = str(os.path.abspath(os.path.join(path, os.pardir))) + \"\\src\\data\\secure-connect-twitter-trends-db.zip\"\n",
-    "    \n",
-    "    return zip_path, cassandra_config"
+    "    except Exception as e:\n",
+    "        \n",
+    "        print(\"Error reading cassandra configurations\", str(e))"
    ]
   }
  ],
