--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -79,12 +79,19 @@
     "    \n",
     "    # Read Configs from configuration.yaml file\n",
     "    \n",
-    "    pubnub_configs = Read_Configs.read_pubnub_configurations()\n",
+    "    try:\n",
     "    \n",
-    "    # Setup Configurations for PubNub Consumer\n",
-    "    \n",
-    "    stream = PubNub_Config(pubnub_configs['subscribe_key'], pubnub_configs['publish_key'], pubnub_configs['user_id'] )\n",
-    "    \n",
+    "        pubnub_configs = Read_Configs.read_pubnub_configurations()\n",
+    "\n",
+    "        # Setup Configurations for PubNub Consumer\n",
+    "\n",
+    "        stream = PubNub_Config(pubnub_configs['subscribe_key'], pubnub_configs['publish_key'], pubnub_configs['user_id'] )\n",
+    "\n",
+    "        \n",
+    "    except Exception as e:        \n",
+    "        \n",
+    "        print(\"Error connecting to PubNub\", str(e))\n",
+    "        \n",
     "    return stream"
    ]
   },
@@ -112,26 +119,32 @@
     "    My_Subscribe_Callback.get_hour = None\n",
     "    My_Subscribe_Callback.get_date = None \n",
     "    \n",
-    "    stream = connect_to_PubNub()\n",
-    "    FirstSubscribeCallback = My_Subscribe_Callback.FirstSubscribeCallback()\n",
-    "    stream.run(FirstSubscribeCallback)\n",
+    "    try:\n",
+    "        stream = connect_to_PubNub()\n",
+    "        FirstSubscribeCallback = My_Subscribe_Callback.FirstSubscribeCallback()\n",
+    "        stream.run(FirstSubscribeCallback)\n",
+    "\n",
+    "        time.sleep(10)\n",
+    "\n",
+    "        # Update variables of Hour and Date extracted from PubNub stream\n",
+    "\n",
+    "        hour = My_Subscribe_Callback.get_hour\n",
+    "        date = My_Subscribe_Callback.get_date\n",
+    "\n",
+    "        # Extract Trends from getdaytrends API based on API configurations\n",
+    "\n",
+    "        trends = Twitter_Trends(country, date, hour, trends)\n",
+    "        top_trends = trends.get_top_trends()\n",
+    "\n",
+    "        # Update Top Trends Global variable based on Extracted Trends\n",
+    "\n",
+    "        My_Subscribe_Callback.set_top_trends = top_trends\n",
+    "        print(My_Subscribe_Callback.set_top_trends)\n",
     "    \n",
-    "    time.sleep(10)\n",
-    "    \n",
-    "    # Update variables of Hour and Date extracted from PubNub stream\n",
-    "    \n",
-    "    hour = My_Subscribe_Callback.get_hour\n",
-    "    date = My_Subscribe_Callback.get_date\n",
-    "    \n",
-    "    # Extract Trends from getdaytrends API based on API configurations\n",
-    "    \n",
-    "    trends = Twitter_Trends(country, date, hour, trends)\n",
-    "    top_trends = trends.get_top_trends()\n",
-    "    \n",
-    "    # Update Top Trends Global variable based on Extracted Trends\n",
-    "    \n",
-    "    My_Subscribe_Callback.set_top_trends = top_trends\n",
-    "    print(My_Subscribe_Callback.set_top_trends)"
+    "        \n",
+    "    except Exception as e:\n",
+    "\n",
+    "        print(\"Error extracting top trends from API\", str(e))"
    ]
   },
   {
@@ -153,9 +166,15 @@
     "    \n",
     "    # Connect to PubNub and Start Streaming to get Tweets Count for Top Trends\n",
     "    \n",
-    "    stream = connect_to_PubNub()\n",
-    "    MainSubscribeCallback = My_Subscribe_Callback.MainSubscribeCallback()\n",
-    "    stream.run(MainSubscribeCallback)"
+    "    try:\n",
+    "    \n",
+    "        stream = connect_to_PubNub()\n",
+    "        MainSubscribeCallback = My_Subscribe_Callback.MainSubscribeCallback()\n",
+    "        stream.run(MainSubscribeCallback)       \n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        \n",
+    "        print(\"Error extracting tweets count for top trends\", str(e))"
    ]
   },
   {
@@ -179,16 +198,21 @@
     "    \n",
     "    URL = \"https://9188-2a02-a210-2ec2-1480-58ec-cacd-5b36-a6cf.ngrok-free.app/trend_read_configurations/\"\n",
     "    \n",
-    "    # Get request to Trends API\n",
+    "    try:\n",
+    "        # Get request to Trends API\n",
+    "\n",
+    "        r = requests.get(url = URL)\n",
+    "\n",
+    "        # Load Configurations for Number of Trends and Location\n",
+    "\n",
+    "        trends = r.json()[0]\n",
+    "        country = r.json()[1]\n",
+    "\n",
+    "        return trends, country\n",
     "    \n",
-    "    r = requests.get(url = URL)\n",
-    "    \n",
-    "    # Load Configurations for Number of Trends and Location\n",
-    "    \n",
-    "    trends = r.json()[0]\n",
-    "    country = r.json()[1]\n",
-    "    \n",
-    "    return trends, country"
+    "    except Exception as e:\n",
+    "        \n",
+    "        print(\"Error extracting number of trends and location from API\", str(e))"
    ]
   },
   {
@@ -212,15 +236,21 @@
     "    \n",
     "    URL = \"https://9188-2a02-a210-2ec2-1480-58ec-cacd-5b36-a6cf.ngrok-free.app/get_timer/\"\n",
     "    \n",
-    "    # Get Request to Time API\n",
+    "    try:\n",
+    "        \n",
+    "        # Get Request to Time API\n",
+    "\n",
+    "        r = requests.get(url = URL)\n",
+    "\n",
+    "        # Load Configurations for Minutes\n",
+    "\n",
+    "        minutes = r.json()\n",
+    "\n",
+    "        return minutes\n",
     "    \n",
-    "    r = requests.get(url = URL)\n",
-    "    \n",
-    "    # Load Configurations for Minutes\n",
-    "    \n",
-    "    minutes = r.json()\n",
-    "    \n",
-    "    return minutes"
+    "    except Exception as e:\n",
+    "        \n",
+    "        print(\"Error extracting minutes from API\", str(e))"
    ]
   },
   {
@@ -240,13 +270,20 @@
    "source": [
     "def get_trends_tweets_from_Cassandra():\n",
     "    \n",
-    "    # Connect to Cassandra DB\n",
+    "    try:\n",
     "    \n",
-    "    session = Cassandra_DB_Setup.cassandra_connection(zip_path, cassandra_configs)\n",
+    "        # Connect to Cassandra DB\n",
+    "\n",
+    "        session = Cassandra_DB_Setup.cassandra_connection(zip_path, cassandra_configs)\n",
+    "\n",
+    "        # Select * from table\n",
+    "\n",
+    "        Cassandra_DB_Setup.select_from_table(session, \"twitter_trends\", \"tweets_per_trend\")\n",
+    "        \n",
     "    \n",
-    "    # Select * from table\n",
-    "    \n",
-    "    Cassandra_DB_Setup.select_from_table(session, \"twitter_trends\", \"tweets_per_trend\")"
+    "    except Exception as e:\n",
+    "        \n",
+    "        print(\"Error selecting table data from Cassandra\", str(e))"
    ]
   },
   {
@@ -274,38 +311,44 @@
     "    \n",
     "    while True:\n",
     "        \n",
-    "        # Retreive Number of Top Trends and Country from API\n",
+    "        try:\n",
     "        \n",
-    "        trends, country = get_configs_from_trends_API()\n",
-    "        \n",
-    "        time.sleep(60)\n",
-    "        \n",
-    "        # Retrive Minutes from API\n",
-    "        \n",
-    "        minutes = get_configs_from_time_API()\n",
-    "        \n",
-    "        #Check if any of the configurations is updated\n",
-    "        \n",
-    "        if g_end_time is None or g_end_time < datetime.now() or trends!= g_trends or country != g_country or minutes !=g_minutes:\n",
-    "                \n",
-    "                # Update Global Variables\n",
-    "                \n",
-    "                g_trends = trends\n",
-    "                g_country = country\n",
-    "                g_minutes = minutes\n",
-    "                \n",
-    "                # Update Top Trends based on new configurations\n",
-    "                \n",
-    "                update_top_trends(trends, country)\n",
-    "                print(minutes, My_Subscribe_Callback.set_minutes)\n",
-    "                if minutes not in My_Subscribe_Callback.set_minutes:\n",
-    "                    My_Subscribe_Callback.set_minutes.append(minutes)\n",
-    "                    My_Subscribe_Callback.start_times.append(None)\n",
+    "            # Retreive Number of Top Trends and Country from API\n",
+    "\n",
+    "            trends, country = get_configs_from_trends_API()\n",
+    "\n",
+    "            time.sleep(60)\n",
+    "\n",
+    "            # Retrive Minutes from API\n",
+    "\n",
+    "            minutes = get_configs_from_time_API()\n",
+    "\n",
+    "            #Check if any of the configurations is updated\n",
+    "\n",
+    "            if g_end_time is None or g_end_time < datetime.now() or trends!= g_trends or country != g_country or minutes !=g_minutes:\n",
+    "\n",
+    "                    # Update Global Variables\n",
+    "\n",
+    "                    g_trends = trends\n",
+    "                    g_country = country\n",
+    "                    g_minutes = minutes\n",
+    "\n",
+    "                    # Update Top Trends based on new configurations\n",
+    "\n",
+    "                    update_top_trends(trends, country)\n",
+    "                    print(minutes, My_Subscribe_Callback.set_minutes)\n",
+    "                    if minutes not in My_Subscribe_Callback.set_minutes:\n",
+    "                        My_Subscribe_Callback.set_minutes.append(minutes)\n",
+    "                        My_Subscribe_Callback.start_times.append(None)\n",
+    "\n",
+    "                    # Modify Time Interval to Automatically Update Trends for the next hour\n",
+    "\n",
+    "                    g_end_time = datetime.now() + timedelta(hours=1)\n",
+    "                    print(g_end_time, datetime.now())\n",
     "                    \n",
-    "                # Modify Time Interval to Automatically Update Trends for the next hour\n",
-    "                \n",
-    "                g_end_time = datetime.now() + timedelta(hours=1)\n",
-    "                print(g_end_time, datetime.now())"
+    "        except Exception as e:\n",
+    "            \n",
+    "            print(\"Error in Thread 1\", str(e))"
    ]
   },
   {
@@ -325,18 +368,25 @@
    "source": [
     "def thread2():\n",
     "    \n",
-    "    # Read Cassandra DB configrations from configuration.yaml\n",
+    "    try:\n",
+    "\n",
+    "        # Read Cassandra DB configrations from configuration.yaml\n",
+    "\n",
+    "        zip_path, cassandra_configs = Read_Configs.read_cassandra_configurations()\n",
+    "\n",
+    "        # Update global variables for Cassadra connection\n",
+    "\n",
+    "        My_Subscribe_Callback.set_zip_path = zip_path\n",
+    "        My_Subscribe_Callback.set_cassandra_configs = cassandra_configs\n",
+    "\n",
+    "        # Start Retreiving Tweet Counts for Top Trends\n",
+    "\n",
+    "        update_tweets_for_trends()\n",
+    "        \n",
     "    \n",
-    "    zip_path, cassandra_configs = Read_Configs.read_cassandra_configurations()\n",
-    "    \n",
-    "    # Update global variables for Cassadra connection\n",
-    "    \n",
-    "    My_Subscribe_Callback.set_zip_path = zip_path\n",
-    "    My_Subscribe_Callback.set_cassandra_configs = cassandra_configs\n",
-    "    \n",
-    "    # Start Retreiving Tweet Counts for Top Trends\n",
-    "    \n",
-    "    update_tweets_for_trends()"
+    "    except Exception as e:\n",
+    "        \n",
+    "        print(\"Error in Thread 2\", str(e))"
    ]
   },
   {
@@ -376,10 +426,12 @@
     "        t2.daemon = True  # set thread to daemon ('ok' won't be printed in this case)\n",
     "        t2.start()\n",
     "        \n",
-    "    except:\n",
-    "        print (\"Error: unable to start thread\")\n",
+    "    except Exception as e:\n",
+    "        \n",
+    "        print (\"Error: unable to start threads\", str(e))\n",
     "        \n",
     "    while True:\n",
+    "        \n",
     "        pass\n"
    ]
   },
