--- a/src/common/App.ipynb
+++ b/src/common/App.ipynb
@@ -52,9 +52,14 @@
     "    # Method to Start Twitter PubNub Streaming\n",
     "    \n",
     "    def run(self, MySubscribeCallback):\n",
-    "        self.pubnub.add_listener(MySubscribeCallback)\n",
-    "        self.pubnub.subscribe().channels('pubnub-twitter').execute()\n",
-    "        #self.pubnub.stop()"
+    "        \n",
+    "        try:\n",
+    "            self.pubnub.add_listener(MySubscribeCallback)\n",
+    "            self.pubnub.subscribe().channels('pubnub-twitter').execute()\n",
+    "        \n",
+    "        except Exception as e:\n",
+    "            print(\"Error Starting PubNub Streaming\", str(e))\n",
+    "        "
    ]
   }
  ],
